Added support for building NextThingCo ubifs
By configuring UBIFS and UBINIZE parameters in conf/machin/chip.conf

Signoff, Rikard Söderström <soderstrom.rikard@gmail.com>

--- a/conf/machine/chip.conf
+++ b/conf/machine/chip.conf
@@ -5,11 +5,18 @@
 #https://github.com/NextThingCo/CHIP-linux
 
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-chip"
+PREFERRED_PROVIDER_u-boot ?= "u-boot-chip"
 PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot-chip"
 PREFERRED_VERSION_linux-chip ?= "4.3.0"
 PREFFERED_VERSION_u-boot-chip ?= "v2015.10%"
+KERNEL_IMAGETYPE ?= "zImage"
 
 require conf/machine/include/sun5i.inc
 
-KERNEL_DEVICETREE = "sun5i-r8-chip.dtb"
-UBOOT_MACHINE_chip = "CHIP_config"
+IMAGE_INSTALL_append = " kernel-devicetree kernel-image kernel-modules"
+MKUBIFS_ARGS        = "-e 0x1f8000 -c 2000 -m 0x4000 -x lzo"
+UBINIZE_ARGS        = "-m 0x4000 -p 0x200000 -s 16384"
+IMAGE_CLASSES       = ""
+IMAGE_FSTYPES       = "ext4 tar.gz ubi ubifs"
+KERNEL_DEVICETREE   = "sun5i-r8-chip.dtb"
+UBOOT_MACHINE_chip  = "CHIP_config"
